# dummy-lua

./: .gitignore  CMakeLists.txt  main.c
clib/: luaaux.c  luaaux.h
common/: lua.h  luamem.c  luamem.h  luaobject.h  luastate.c  luastate.h  luastring.c  luastring.h
test/: p1_test.c  p1_test.h
vm/: luado.c  luado.h  luagc.c  luagc.h
